@@ -1,3 +1,5 @@
+* BUG#9043 Pouvoir appliquer un avenant de résiliation sur des contrats réduits
+
 Version 2.0 - 2018-04-13
 * FEA#7959 Ajout de la date de réduction dans l'étape de prévisualisation de l'assitant de mise en réduction
 * BUG#7852 Correction de la boucle d'avertissement dans la règle d'éligibilité
