@@ -1,3 +1,5 @@
+* BUG#9043 Ability to apply terminate endorsement on reduced contracts
+
 Version 2.0 - 2018-04-13
 * FEA#7959 Add reduction date to reduction wizard preview step
 * BUG#7852 Prevent warning loop in eligibility rule
